Fix small shadow overlapping adjacent elements

--- a/Style/main.css
+++ b/Style/main.css
@@ -173,7 +173,7 @@ svg {
 		0px 8.4px 33.4px hsl(var(--shadow-color-hsl) / calc(var(--shadow-opacity) * 0.48)),
 		0px 20px 80px hsl(var(--shadow-color-hsl) / calc(var(--shadow-opacity) * 0.667));
 }
-.small-shadow {
+.small-shadow::before {
 	box-shadow:
 		0px 0.1px 0.3px hsl(var(--shadow-color-hsl) / calc(var(--shadow-opacity) * 0.25)),
 		0px 0.3px 0.7px hsl(var(--shadow-color-hsl) / calc(var(--shadow-opacity) * 0.407)),
